FIX : Alignment 6

--- a/CSS/Account.css
+++ b/CSS/Account.css
@@ -55,12 +55,23 @@ a.sidebar:hover {
 div.add_image {
     cursor: pointer;
 }
-@media screen and (min-width:1200px){
+@media screen and (min-width:1200px) {
     div.inner_row{
-      height: 94%;
+        height: 94%;
+      }
+    
+  }
+  @media screen and (min-width:1500px) {
+      div.inner_row{
+          height: 96%;
+        }
+      
     }
-}
 *::-webkit-scrollbar
 {
     display: none;
 }
+.menu{
+    width:16.6%;
+    
+ }
